<resources>
    <string name="app_name">At Home</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="field_req">Field required</string>
    <string name="failed">Failed</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait...</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="skip">Skip</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="choose_language"><![CDATA[Choose <font color="#F61C00">Language</font>]]></string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="categories">Category</string>
    <string name="offers">Offers</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend in :</string>
    <string name="resend2">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="ok">Ok</string>
    <string name="favorite_offers">Favorite Offers</string>
    <string name="show_all">Show All</string>
    <string name="phone">phone number</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="favourite">Favourite</string>
    <string name="addresses">Addresses</string>
    <string name="setting">Setting</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact us</string>
    <string name="helping">Helping</string>
    <string name="contact_us2">Contact Us</string>
    <string name="discount">Discount</string>
    <string name="fast">Fast</string>
    <string name="no_orders_to_show">No Orders To Show</string>
    <string name="password">Password</string>
    <string name="password_short">Password Short</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_name">User name</string>
    <string name="register">Sign Up</string>
    <string name="you_have_an_account">You Have an Account</string>
    <string name="descriptions">Descriptions</string>
    <string name="comments">Comments</string>
    <string name="quantity">amount</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_details">Product Details</string>
    <string name="reviews">Reviews</string>
    <string name="details">Details</string>
    <string name="searsh">search</string>
    <string name="order_num">Order Number</string>
    <string name="pay">Pay</string>
    <string name="cart">Cart</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="select_the_address">Select the address</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="something">Check internet connection</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="my_wallet">My wallet</string>
    <string name="order_steps">Order Steps</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_id">Order num</string>
    <string name="payment">Payment</string>
    <string name="address_details">Address details</string>
    <string name="determine_address">Select address</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="address_name">Address name (optional)</string>
    <string name="homee">Home</string>
    <string name="work">Work</string>
    <string name="getting_location">Getting location...</string>
    <string name="featured_products">Featured Products</string>
    <string name="sar">EGP</string>
    <string name="most_seller">Most Seller</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="no_search_results">No search results</string>
    <string name="filter">Filter</string>
    <string name="search">Search...</string>
    <string name="comments2">Comments :</string>
    <string name="add_comment">Add comment....</string>
    <string name="no_comments">No Comments</string>
    <string name="pls_signin_signup">Please sign in or sign up</string>
    <string name="user_not_found">User not found</string>
    <string name="inv_email">Invalid email</string>
    <string name="phone_found">Phone number found</string>
    <string name="email_found">Email is found</string>
    <string name="comments3">comments</string>
    <string name="policy">Policy</string>
    <string name="pay_on_receive">Pay on receive</string>
    <string name="online_payment">Online payment</string>
    <string name="cost">Cost:</string>
    <string name="coupon">Coupon:</string>
    <string name="order_shipping">Order shipping</string>
    <string name="order_in_way">In way</string>
    <string name="order_successfuly">Order delivery successfully</string>
    <string name="addition_details">Addition details</string>
    <string name="update_address">Update address</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suc">Success!</string>
    <string name="menu">Wedding Menu</string>
    <string name="add_to_menu">Add to menu</string>
    <string name="add">Add</string>
    <string name="done2">Done</string>
    <string name="ch_cart_menu">Choose cart,menu or both</string>
    <string name="amount">Amount</string>
    <string name="check">Check</string>
    <string name="coupon_code">Enter coupon code....</string>
    <string name="total_items_cost">Total Items cost:</string>
    <string name="discount2">Discount:</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="you_got_discount">you got discount</string>
    <string name="inv_coupon">Invalid coupon code</string>
    <string name="delivery_method">Delivery method</string>
    <string name="delivery_for_free_nin_7_days">Delivery for free \n in 7 days</string>
    <string name="fast_delivery">Fast delivery</string>
    <string name="packaging">Packaging</string>
    <string name="packaging_by_athome_nmanufacturer_packaging">Packaging by AtHome\nManufacturer packaging</string>
    <string name="special_packing">Special packing</string>
    <string name="in_3_days">in 3 days</string>
    <string name="ready_to_gift_packaging">Ready-to-gift packaging</string>
    <string name="status">Status</string>
    <string name="price">Price:</string>
    <string name="order_details">Order details</string>
    <string name="delivery">Delivery:</string>
    <string name="other_products">Other products</string>
    <string name="my_points">My Points</string>
    <string name="choose">أختيار</string>
    <string name="branches">Branches</string>

</resources>