<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"

            >

            <CheckBox
                android:id="@+id/checkboxCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:button="@drawable/checkbox_cart_bg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/gray6"
                android:textSize="14sp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray3" />

            <CheckBox
                android:id="@+id/checkboxMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/transparent"
                android:button="@drawable/checkbox_cart_bg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/add_to_menu"
                android:textColor="@color/gray6"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                >

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_primary"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_strock"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"

                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>