<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.athome.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/gray0"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/select_the_address"
                    android:textColor="@color/gray4"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSelect"

            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </androidx.recyclerview.widget.RecyclerView>

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="35dp"
                  android:background="@drawable/rounded_white"
                  android:text="@string/add_address"
                  android:textSize="15sp"
                  android:layout_marginEnd="90dp"
                  android:layout_marginStart="90dp"
                  android:layout_marginTop="15dp"
                  android:gravity="center"
                  android:textColor="@color/gray5"
                  />
            </LinearLayout>


        </FrameLayout>

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="@drawable/custom_bg"
            android:text="@string/confirm_address"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
